--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>You like building website like me?</h3>
+          <p class="contact-message">Come, let's talk. I'm happy to build a website with you.</p>
           
           <a class="btn" href="mailto:geraldjohn.aguyaoy@yahoo.com">Contact Me</a>
         </div>
